(cp 91ba4d94) issue #2234 continue colour updates for dark mode

--- a/admin/themes/default/css/components/album_selector.css
+++ b/admin/themes/default/css/components/album_selector.css
@@ -37,7 +37,7 @@
   right: -40px;
   top: -40px;
   font-size: 30px;
-  color: #444;
+  color: #FFF;
 }
 
 .ClosePopIn:hover {
